--- a/PhanTichTaiChinh/PT_1.ipynb
+++ b/PhanTichTaiChinh/PT_1.ipynb
@@ -55,11 +55,41 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "3fe4c2c3-f339-4594-a35c-8edd5e40ed11",
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "1c812cf4-e115-4319-b6cd-3b5851a320f9",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "# PEST\n"
+    "import numpy as np\n",
+    "def CohenEffectSize(group1, group2):\n",
+    "    \"\"\"Computes Cohen's effect size for two groups.\n",
+    "    \n",
+    "    group1: Series or DataFrame\n",
+    "    group2: Series or DataFrame\n",
+    "    \n",
+    "    returns: float if the arguments are Series;\n",
+    "             Series if the arguments are DataFrames\n",
+    "    \"\"\"\n",
+    "    diff = group1.mean() - group2.mean()\n",
+    "\n",
+    "    var1 = group1.var()\n",
+    "    var2 = group2.var()\n",
+    "    n1, n2 = len(group1), len(group2)\n",
+    "\n",
+    "    pooled_var = (n1 * var1 + n2 * var2) / (n1 + n2)\n",
+    "    d = diff / np.sqrt(pooled_var)\n",
+    "    return d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bd8746c9-e7d7-48c5-a01b-946db3b9e881",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CohenEffectSize"
    ]
   }
  ],
