--- a/PublicFinance/PublicFinance.ipynb
+++ b/PublicFinance/PublicFinance.ipynb
@@ -65,18 +65,26 @@
     "\n",
     "**Indifference curve** and **budget line** - what they want and what they can afford. Intersection of these 2 curves = optimal solutions for each person.\n",
     "\n",
-    "- Indifferent Curve = combination of quantity 2 goods where the utilities provided is the same at each point on the curve, hence 'indifference'. Cobb's Utilities Function:\n",
+    "- Indifferent Curve = combination of quantity 2 goods where the utilities provided is the same at each point on the curve, hence 'indifference'. **Cobb's Utilities Function**:\n",
     "    $${\\displaystyle U\\left(x,y\\right)=x^\\alpha y^{1-\\alpha}}$$\n",
-    "    - Consumers always prefer higher curves\n",
+    "    - Consumers always prefer higher curves (more is better, preference for variety)\n",
     "    - Always *downward* sloping\n",
     "    - Marginal Utility\n",
     "    - ==> We come to the conclusion that each individual has a well-defined utilty functions: $U = f(x1,x2,x3...)$\n",
     "    \n",
     "\n",
-    "- Marginal Utility:\n",
+    "- **Marginal Utility**:\n",
     "    - increment of utility when one additional good is consumed\n",
     "    - the principle of **diminishing marginal utility**, x(t2) gives less utilities than x(t1), x1 and x2 are the same kind of goods\n",
+    "    \n",
+    "    \n",
+    "- **Marginal rate of Substitution**:\n",
     "    - Marginal utility of x: $${\\displaystyle U_1\\left(x,y\\right)=\\alpha \\left(x/y\\right)^{\\alpha-1}}$$\n",
+    "    - Marginal utility of y: $${\\displaystyle U_2\\left(x,y\\right)=(1-\\alpha) \\left(x/y\\right)^{\\alpha}}$$\n",
+    "    - ==> Marginal rate of Substitutions: $${\\displaystyle {\\frac {dx}{dy}}=-{\\frac {\\alpha }{1-\\alpha }}\\left({\\frac {y}{x}}\\right)}$$\n",
+    "    \n",
+    "    - Explanation: Exchanging A goods for B goods, the rate of exchange depends on marginal utility. A has low marginal utility ==> Exchange more A for only 1 B, and vice versa.\n",
+    " \n",
     "- (Budget line = combination of quantity of 2 goods that each person can buy)\n",
     "\n",
     "\n"
