--- a/PublicFinance/PublicFinance.ipynb
+++ b/PublicFinance/PublicFinance.ipynb
@@ -91,12 +91,49 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e649a4df-558d-463d-a77d-b37f50595966",
+   "cell_type": "markdown",
+   "id": "203802dc-9c43-4844-a1dc-38f6427c6a43",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "May 17 \n",
+    "### WHAT HAPPEN TO UTILITY MODEL WHEN PRICE OF A GOOD CHANGE\n",
+    "\n",
+    "- 2 Effects happen at the same time\n",
+    "    - Substitution effect\n",
+    "    - Income effect\n",
+    "    \n",
+    "Movies and Cakes examples, where price of movies increases.\n",
+    "\n",
+    "- First, Because price of movies increases ==> Demand fewer movies ==> Slope of budget constraint changes \n",
+    "    - See calculation of slope of budget constraints*\n",
+    "    \n",
+    "- Second, Because price increases ==> Consumer is poorer \n",
+    "    - Budget line shift left, and intersect with a lower utility functions (new budget line + new U curve)\n",
+    "    \n",
+    "- Final result: new intersection point***\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "##### Welfare economics\n",
+    "- study of determinants of welfare ==> Supply, demands and social surplus + Deadweight Loss\n",
+    "\n",
+    "\n",
+    "(determine how demand and supply is drawn)\n",
+    "### DEMAND CURVES\n",
+    "- Price change ==> new quantity points from each price change\n",
+    "    - Trace out demands curve from said points\n",
+    "\n",
+    "- Demand curves derive from Utilities maximizations of consumers \n",
+    "\n",
+    "- Demand Elasticity\n",
+    "    - Calculate Elasticity at each price point\n",
+    "\n",
+    "### SUPPLY CURVES\n",
+    "- Supply curves derive from Profit Maximizations model of producers\n",
+    "    - Marginal Revenue = Marginal Cost\n",
+    "    - or Maximization of Profit function\n",
+    "        - Profit = Total Revenue - Total Cost\n"
+   ]
   }
  ],
  "metadata": {
