--- a/PublicFinance/PublicFinance.ipynb
+++ b/PublicFinance/PublicFinance.ipynb
@@ -134,6 +134,40 @@
     "    - or Maximization of Profit function\n",
     "        - Profit = Total Revenue - Total Cost\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3152f148-0dce-4453-ad69-b9591b3bcc77",
+   "metadata": {},
+   "source": [
+    "#### Exercise\n",
+    "\n",
+    "##### Budget constraint 1\n",
+    "- Give budget, Price of 2 goods, draw budget constraint\n",
+    "    - Max Q good 1, Max Q good 2\n",
+    "    - Draw line ==> Budget line\n",
+    "- What if price change\n",
+    "    - Normal: Recalculate Max Q\n",
+    "    - Subsidize first X goods:\n",
+    "        - \"Bent\" budget line, find (break point)\n",
+    "            - 10C + 4F = 10. \n",
+    "                - Subsidize 5 cloth, at half-price\n",
+    "                - ==> 5HalfPrice + 4F = 100\n",
+    "                - ==> Quantity of food at break\n",
+    "                - ==> Break point\n",
+    "                - From break point ==> Calculate function of part 1 and part 2 of budget line\n",
+    "\n",
+    "##### Budget constraint 2 \n",
+    "- Use leisure and work time as x-axis, income as y-axis\n",
+    "\n",
+    "- First, Calculate budget line without program\n",
+    "- Second, use benefit reduction rate to recalculate slope\n",
+    "\n",
+    "\n",
+    "- Benefit reduction rate\n",
+    "    - Lower the slope\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
