--- a/PublicFinance/PublicFinance.ipynb
+++ b/PublicFinance/PublicFinance.ipynb
@@ -140,34 +140,43 @@
    "id": "3152f148-0dce-4453-ad69-b9591b3bcc77",
    "metadata": {},
    "source": [
-    "#### Exercise\n",
+    "### Exercise\n",
     "\n",
-    "##### Budget constraint 1\n",
-    "- Give budget, Price of 2 goods, draw budget constraint\n",
-    "    - Max Q good 1, Max Q good 2\n",
-    "    - Draw line ==> Budget line\n",
-    "- What if price change\n",
-    "    - Normal: Recalculate Max Q\n",
-    "    - Subsidize first X goods:\n",
-    "        - \"Bent\" budget line, find (break point)\n",
-    "            - 10C + 4F = 10. \n",
-    "                - Subsidize 5 cloth, at half-price\n",
-    "                - ==> 5HalfPrice + 4F = 100\n",
-    "                - ==> Quantity of food at break\n",
-    "                - ==> Break point\n",
-    "                - From break point ==> Calculate function of part 1 and part 2 of budget line\n",
+    "#### Budget constraint 1\n",
+    "Draw normal budget constraint from max quantity of each goods\n",
+    "- If price shifts (subsidize first X goods)\n",
+    "    - \"Bent\" budget line, find (break point)\n",
+    "        - 10C + 4F = 10. \n",
+    "            - Subsidize 5 cloth, at half-price\n",
+    "            - ==> 5HalfPrice + 4F = 100\n",
+    "            - ==> Quantity of food at break\n",
+    "            - ==> Break point\n",
+    "            - From break point ==> Calculate function of part 1 and part 2 of budget line\n",
     "\n",
-    "##### Budget constraint 2 \n",
-    "- Use leisure and work time as x-axis, income as y-axis\n",
+    "#### Budget constraint 2 \n",
+    "- If given benefit, when workers don't work, they don't lose as much income\n",
+    "==> lower slope\n",
     "\n",
-    "- First, Calculate budget line without program\n",
-    "- Second, use benefit reduction rate to recalculate slope\n",
+    "- At the point which benefit has been canceled out (due to reduction rate), slope goes back to normal\n",
+    "- Use leisure as x-axis, income as y-axis\n",
+    "\n",
+    "#### DWL from Subsidy\n",
+    "\n",
+    "- Calculate equilibrium\n",
+    "- When subsidized\n",
+    "    - Consumers shift right (but not for consumer \n",
     "\n",
     "\n",
-    "- Benefit reduction rate\n",
-    "    - Lower the slope\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8b2f6f98-49b2-4877-b0fa-8187cd38693a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
