--- a/PublicFinance/PublicFinance.ipynb
+++ b/PublicFinance/PublicFinance.ipynb
@@ -171,9 +171,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a09a0ff8-ced2-4b88-a5b8-1be17f6a8520",
+   "metadata": {},
+   "source": [
+    "# PULIC GOODSS\n",
+    "\n",
+    "### Social Marginal benefits\n",
+    "\n",
+    "#### When the good is a private good\n",
+    "- Equals to sum of all demands curve\n",
+    "\n",
+    "#### When they good is a public good\n",
+    "- Quantity will be evenly distributed for each individual\n",
+    "- Demand curves summed **vertically** based on Q\n",
+    "    - Calculate using P function (insted of Q functions)\n",
+    "    \n",
+    "### Excercise\n",
+    "- If pubic goods, sum vertically in term of P\n",
+    "    - Multiply by the amount of people in each group\n",
+    "    - SMB = SMC = P1 + P2\n",
+    "    - If optimal Quantity is fractional (19.5), choose 19 or 20?\n",
+    "        - Draw graph\n",
+    "        - Calculate consumer surplus for each whole amount (minus the total cost)\n",
+    "        - Compare surplus for each situation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b2f6f98-49b2-4877-b0fa-8187cd38693a",
+   "id": "cdd05c38-65f9-4620-8c4e-107932f44001",
    "metadata": {},
    "outputs": [],
    "source": []
