--- a/Speaking prep.ipynb
+++ b/Speaking prep.ipynb
@@ -44,7 +44,7 @@
    "id": "48955f4e-64b3-4935-a415-75e39585f78b",
    "metadata": {},
    "source": [
-    "# topic 2\n",
+    "# Topic 2\n",
     "Describe your dream house.\n",
     "You should say:\n",
     "- where you are living now\n",
@@ -54,9 +54,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9154fe03-d82b-48b4-a42f-12293eb7d7a3",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "- Current house: already wonderful, small cozy\n",
+    "- but if were to be dream house, would have to make some adjustment\n",
+    "- built traditionally, in a sense\n",
+    "    - big space, no room\n",
+    "    - build room for everyone\n",
+    "    - maybe even sound proof, music without borthering\n",
+    "    - but have to make sure there's still maintain open space, not too stuffy\n",
+    "- secondly, add sizable garden\n",
+    "    - covered in grass\n",
+    "    - would grow trees or many kind of flowers (like roses or orchid)\n",
+    "    - things that help get in touch with nature\n",
+    "    - make house seem rural\n",
+    "- lastly, i want one story only\n",
+    "    - maybe a stair to walk up to the roof, relax in the evening\n",
+    "    - just don't like the idea of climbing stairs\n",
+    "- So if describe in one word, i guess it would be like a cottage\n",
+    "with more open space\n",
+    "---"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "671fc08f-8406-41e6-8d06-678f51a0b700",
+   "id": "71a8da69-2b9f-44e5-bae4-d67a83434bad",
    "metadata": {},
    "outputs": [],
    "source": []
