--- a/Speaking prep.ipynb
+++ b/Speaking prep.ipynb
@@ -80,12 +80,185 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "71a8da69-2b9f-44e5-bae4-d67a83434bad",
+   "cell_type": "markdown",
+   "id": "d2b29ed7-1013-47a8-b420-cdb5909d4b33",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# TOPIC 3\n",
+    "Describe a memorable trip you have had.\n",
+    "You should say:\n",
+    "- where you went\n",
+    "- how you got there\n",
+    "- what you did there\n",
+    "and explain why you enjoyed it.\n",
+    "\n",
+    "---\n",
+    "- 2 years ago\n",
+    "- with a friend\n",
+    "- Vung Tau\n",
+    "\n",
+    "ooo\n",
+    "- asked my sister to drive\n",
+    "- supposed to be ordinary \n",
+    "- excuse to relax\n",
+    "==> but it turns out amazing\n",
+    "- friend ==> gf\n",
+    "\n",
+    "ooo\n",
+    "\n",
+    "- a bit weird\n",
+    "- actually details blurry\n",
+    "- went seaside\n",
+    "- had seafood etc.\n",
+    "\n",
+    "ooo\n",
+    "- most memorable part\n",
+    "- friend and me went to the bar together\n",
+    "- were supposed to make friends there\n",
+    "- but too shy, so end up talking to each other\n",
+    "\n",
+    "\n",
+    "ooo\n",
+    "- realize we had so much in common\n",
+    "- 2 peas in a pod\n",
+    "- same movies, same hobbies\n",
+    "- First time i actually get to know my friend\n",
+    "- first time i had this kind of connection\n",
+    "\n",
+    "\n",
+    "- Ended up chatting all night, and after the trip, we became a thing\n",
+    "\n",
+    "- memorable not because of where i went, but whom...\n",
+    "- exp only happend once in a lifetime\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9dd6beb5-be3b-40e7-8e0a-999a637fabbb",
+   "metadata": {},
+   "source": [
+    "# TOPIC 4\n",
+    "Describe a memorable EVENT you have had.\n",
+    "You should say:\n",
+    "- where you went\n",
+    "- how you got there\n",
+    "- what you did there\n",
+    "and explain why you enjoyed it.\n",
+    "\n",
+    "---\n",
+    "- EVENT 2 years ago\n",
+    "- decided Vung Tau\n",
+    "- with a friend\n",
+    "\n",
+    "\n",
+    "ooo\n",
+    "- supposed to be ordinary \n",
+    "- excuse to relax\n",
+    "- SOMETHING AMAZING HAPPENS\n",
+    "- DURING THE SAME NIGHT, friend ==> gf\n",
+    "\n",
+    "ooo\n",
+    "- actually details blurry\n",
+    "- went seaside\n",
+    "- had seafood etc.\n",
+    "\n",
+    "ooo\n",
+    "- most memorable part\n",
+    "- friend and me went to the bar together\n",
+    "- were supposed to make friends there\n",
+    "- but too shy, so end up talking to each other\n",
+    "\n",
+    "\n",
+    "ooo\n",
+    "- realize we had so much in common\n",
+    "- 2 peas in a pod\n",
+    "- same movies, same hobbies\n",
+    "- First time i actually get to know my friend\n",
+    "- first time i had this kind of connection\n",
+    "\n",
+    "\n",
+    "- Ended up chatting all night, and after the trip, we became a thing\n",
+    "\n",
+    "\n",
+    "- THE EVENT THAT NIGHT\n",
+    "- THE DAY i met my soulmate\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c7d59b16-6439-4ed0-bafa-ba767f8075a7",
+   "metadata": {},
+   "source": [
+    "# TOPIC 5\n",
+    "- phone \n",
+    "- old model ==> 4-5 years ago\n",
+    "- I think importance not because (how many things, how pretty it is)\n",
+    "- indirect effect of the technology advancement of our society\n",
+    "\n",
+    "- without it:\n",
+    "    - be cut off from all commun\n",
+    "        - nobody use landline, or letters, or pigeon anymore\n",
+    "    - Most entertainment accessed through\n",
+    "        - music, movies\n",
+    "    - Even money\n",
+    "        - physical cash is going into obscurity, \n",
+    "        - mostly use phone for payment now\n",
+    "\n",
+    "- undeniably the most important, possession\n",
+    "\n",
+    "- but careful, importance, turn into addiction\n",
+    "- man-times, find myself unable, put down\n",
+    "\n",
+    "\n",
+    "- even thou important, limit my use, for both my health and sanity"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "202a530d-e10e-40ad-b23b-c2381899317d",
+   "metadata": {},
+   "source": [
+    "# TOPIC 6\n",
+    "Describe one of your best friends during your school days.\n",
+    "You should say:\n",
+    "- what this person looked like\n",
+    "- what kind of person he/she was\n",
+    "- what you did when you were together\n",
+    "and explain why he/she was one of your best friends. \n",
+    "\n",
+    "\n",
+    "- most close with, sat next to me\n",
+    "- knew when, first got into h-sch\n",
+    "- long ago, still remember vividly the first time i see her\n",
+    "\n",
+    "oooo\n",
+    "- ebony hair was long, smooth.\n",
+    "- has enthusiastic, clear brown eyes\n",
+    "- her face is chubby, but not so much that you would mistake it to be fat\n",
+    "- even with imperfect teeth, her wide smile emit the kind of joy not seen from ordinary girls.\n",
+    "\n",
+    "ooo\n",
+    "- when sat down with her...\n",
+    "- relieved that her she also has a great personaility\n",
+    "- She's kind and sweet, but also immensely courageous\n",
+    "- She's truthful at the time when it's the hardest\n",
+    "- and earnest when everyone cynical\n",
+    "- She dare to be vulnerable when everyone is guarded\n",
+    "- and i am consistently awe by it.\n",
+    "\n",
+    "\n",
+    "ooo\n",
+    "- cru\n",
+    "- remind me of myself, how much in common\n",
+    "- also the person i strive to be\n",
+    "\n",
+    "\n",
+    "\n",
+    "- grew apart, but i genuinly "
+   ]
   }
  ],
  "metadata": {
