--- a/Stats/Kien/May 14-CAR.ipynb
+++ b/Stats/Kien/May 14-CAR.ipynb
@@ -344,7 +344,7 @@
    "id": "fcf88bf5-89e6-44eb-ac54-1584cb530f22",
    "metadata": {},
    "source": [
-    "Missing Data displayed in %"
+    " # Missing Data displayed in %"
    ]
   },
   {
@@ -1742,7 +1742,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.1"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
