global pop project update

--- a/Stats/Statistics for Python/Untitled.ipynb
+++ b/Stats/Statistics for Python/Untitled.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 1,
    "id": "50131d21-d3f5-47ea-bdca-6da8b43b5f03",
    "metadata": {},
    "outputs": [],
@@ -354,7 +354,7 @@
    "id": "4bbfb8d7-2f6a-4854-8408-16b2de9f3b25",
    "metadata": {},
    "source": [
-    "The visulizations below are used to compare amount of delayed flight between categories, specifically airlines. While the boxplots are easier to read, the violin plot show the hidden distribution of data from each category (ie: the difference in distribution shape of Alaska)."
+    "The visualizations below are used to compare a numeric value (amount of delayed flight) between categories (airlines). While the boxplots are easier to read, the violin plot show the hidden distribution of data from each category (ie: the difference in distribution shape of Alaska)."
    ]
   },
   {
@@ -496,7 +496,9 @@
    "id": "eaad487b-f44c-4138-89da-5aaf311f9d57",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "sns.histplot()"
+   ]
   }
  ],
  "metadata": {
