--- a/Stats/data/Data_cleaning.ipynb
+++ b/Stats/data/Data_cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "02aaa597-12ae-4001-a399-caa988bc0889",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 31,
    "id": "69844cb1-2274-4bc0-92a0-ecbb6caf7a47",
    "metadata": {},
    "outputs": [],
@@ -382,18 +382,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "a07319a7-25f4-414f-8ad1-bc78e21a029e",
+   "execution_count": 23,
+   "id": "1fb0c324-d72b-4f9a-9b23-920465f39cc0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in year_list:\n",
-    "    i = str(i)"
+    "year_list = np.arange(2020-5*10,2025,5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 24,
+   "id": "10a1aacc-acd4-4d0f-92ff-be9289054fc3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "year_list = year_list.tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "a07319a7-25f4-414f-8ad1-bc78e21a029e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(len(year_list)):\n",
+    "    year_list[i] = str(year_list[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "7dc49eee-bbb9-4a91-b0bc-5f0d97bc7bb3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "year_list.insert(0, 'country')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "6ab7e5c2-501e-4ed8-8492-3a4a4dd66244",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['country',\n",
+       " '1970',\n",
+       " '1975',\n",
+       " '1980',\n",
+       " '1985',\n",
+       " '1990',\n",
+       " '1995',\n",
+       " '2000',\n",
+       " '2005',\n",
+       " '2010',\n",
+       " '2015',\n",
+       " '2020']"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "year_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "id": "5cf0ce06-f32e-49f3-8899-a7942f1e27ae",
    "metadata": {},
    "outputs": [],
@@ -403,7 +465,258 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 33,
+   "id": "859e458f-c07d-4cbb-b8ed-eabd2a4c05d2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>country</th>\n",
+       "      <th>1970</th>\n",
+       "      <th>1975</th>\n",
+       "      <th>1980</th>\n",
+       "      <th>1985</th>\n",
+       "      <th>1990</th>\n",
+       "      <th>1995</th>\n",
+       "      <th>2000</th>\n",
+       "      <th>2005</th>\n",
+       "      <th>2010</th>\n",
+       "      <th>2015</th>\n",
+       "      <th>2020</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Afghanistan</td>\n",
+       "      <td>31.5</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>32.9</td>\n",
+       "      <td>34.5</td>\n",
+       "      <td>37.6</td>\n",
+       "      <td>37.7</td>\n",
+       "      <td>37.7</td>\n",
+       "      <td>37.7</td>\n",
+       "      <td>37.7</td>\n",
+       "      <td>37.7</td>\n",
+       "      <td>38.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Angola</td>\n",
+       "      <td>55.0</td>\n",
+       "      <td>54.6</td>\n",
+       "      <td>54.1</td>\n",
+       "      <td>53.6</td>\n",
+       "      <td>53.1</td>\n",
+       "      <td>52.7</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>46.0</td>\n",
+       "      <td>44.3</td>\n",
+       "      <td>48.5</td>\n",
+       "      <td>52.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Albania</td>\n",
+       "      <td>26.8</td>\n",
+       "      <td>26.8</td>\n",
+       "      <td>26.9</td>\n",
+       "      <td>26.9</td>\n",
+       "      <td>26.9</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>30.1</td>\n",
+       "      <td>30.6</td>\n",
+       "      <td>29.5</td>\n",
+       "      <td>32.9</td>\n",
+       "      <td>33.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Andorra</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>35.9</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>36.3</td>\n",
+       "      <td>36.3</td>\n",
+       "      <td>36.4</td>\n",
+       "      <td>36.1</td>\n",
+       "      <td>35.6</td>\n",
+       "      <td>35.7</td>\n",
+       "      <td>35.3</td>\n",
+       "      <td>35.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>United Arab Emirates</td>\n",
+       "      <td>31.7</td>\n",
+       "      <td>31.9</td>\n",
+       "      <td>31.7</td>\n",
+       "      <td>32.4</td>\n",
+       "      <td>32.8</td>\n",
+       "      <td>32.6</td>\n",
+       "      <td>32.2</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>32.7</td>\n",
+       "      <td>29.7</td>\n",
+       "      <td>26.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>192</th>\n",
+       "      <td>Samoa</td>\n",
+       "      <td>40.7</td>\n",
+       "      <td>40.7</td>\n",
+       "      <td>40.7</td>\n",
+       "      <td>40.7</td>\n",
+       "      <td>40.7</td>\n",
+       "      <td>40.7</td>\n",
+       "      <td>40.7</td>\n",
+       "      <td>41.4</td>\n",
+       "      <td>40.7</td>\n",
+       "      <td>38.7</td>\n",
+       "      <td>38.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>193</th>\n",
+       "      <td>Yemen</td>\n",
+       "      <td>37.2</td>\n",
+       "      <td>37.2</td>\n",
+       "      <td>37.2</td>\n",
+       "      <td>37.2</td>\n",
+       "      <td>37.2</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>34.9</td>\n",
+       "      <td>34.7</td>\n",
+       "      <td>35.8</td>\n",
+       "      <td>36.7</td>\n",
+       "      <td>37.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>194</th>\n",
+       "      <td>South Africa</td>\n",
+       "      <td>68.5</td>\n",
+       "      <td>67.3</td>\n",
+       "      <td>65.8</td>\n",
+       "      <td>62.9</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>60.2</td>\n",
+       "      <td>57.8</td>\n",
+       "      <td>64.8</td>\n",
+       "      <td>63.4</td>\n",
+       "      <td>62.7</td>\n",
+       "      <td>64.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>195</th>\n",
+       "      <td>Zambia</td>\n",
+       "      <td>66.6</td>\n",
+       "      <td>67.3</td>\n",
+       "      <td>66.5</td>\n",
+       "      <td>63.0</td>\n",
+       "      <td>60.5</td>\n",
+       "      <td>49.7</td>\n",
+       "      <td>45.5</td>\n",
+       "      <td>54.5</td>\n",
+       "      <td>55.6</td>\n",
+       "      <td>57.1</td>\n",
+       "      <td>57.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>196</th>\n",
+       "      <td>Zimbabwe</td>\n",
+       "      <td>40.1</td>\n",
+       "      <td>39.5</td>\n",
+       "      <td>38.6</td>\n",
+       "      <td>37.7</td>\n",
+       "      <td>36.9</td>\n",
+       "      <td>37.7</td>\n",
+       "      <td>41.0</td>\n",
+       "      <td>43.1</td>\n",
+       "      <td>43.1</td>\n",
+       "      <td>43.9</td>\n",
+       "      <td>51.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>197 rows × 12 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  country  1970  1975  1980  1985  1990  1995  2000  2005  \\\n",
+       "0             Afghanistan  31.5  33.0  32.9  34.5  37.6  37.7  37.7  37.7   \n",
+       "1                  Angola  55.0  54.6  54.1  53.6  53.1  52.7  52.0  46.0   \n",
+       "2                 Albania  26.8  26.8  26.9  26.9  26.9  27.0  30.1  30.6   \n",
+       "3                 Andorra  36.0  35.9  36.0  36.3  36.3  36.4  36.1  35.6   \n",
+       "4    United Arab Emirates  31.7  31.9  31.7  32.4  32.8  32.6  32.2  32.0   \n",
+       "..                    ...   ...   ...   ...   ...   ...   ...   ...   ...   \n",
+       "192                 Samoa  40.7  40.7  40.7  40.7  40.7  40.7  40.7  41.4   \n",
+       "193                 Yemen  37.2  37.2  37.2  37.2  37.2  36.0  34.9  34.7   \n",
+       "194          South Africa  68.5  67.3  65.8  62.9  60.0  60.2  57.8  64.8   \n",
+       "195                Zambia  66.6  67.3  66.5  63.0  60.5  49.7  45.5  54.5   \n",
+       "196              Zimbabwe  40.1  39.5  38.6  37.7  36.9  37.7  41.0  43.1   \n",
+       "\n",
+       "     2010  2015  2020  \n",
+       "0    37.7  37.7  38.3  \n",
+       "1    44.3  48.5  52.1  \n",
+       "2    29.5  32.9  33.8  \n",
+       "3    35.7  35.3  35.0  \n",
+       "4    32.7  29.7  26.0  \n",
+       "..    ...   ...   ...  \n",
+       "192  40.7  38.7  38.7  \n",
+       "193  35.8  36.7  37.5  \n",
+       "194  63.4  62.7  64.0  \n",
+       "195  55.6  57.1  57.9  \n",
+       "196  43.1  43.9  51.0  \n",
+       "\n",
+       "[197 rows x 12 columns]"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "id": "40bbe3c6-a467-402e-bdb0-afa0d2fef737",
    "metadata": {},
    "outputs": [
@@ -437,32 +750,32 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Afghanistan</td>\n",
-       "      <td>1977</td>\n",
-       "      <td>33.0</td>\n",
+       "      <td>1970</td>\n",
+       "      <td>31.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Angola</td>\n",
-       "      <td>1977</td>\n",
-       "      <td>54.4</td>\n",
+       "      <td>1970</td>\n",
+       "      <td>55.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Albania</td>\n",
-       "      <td>1977</td>\n",
+       "      <td>1970</td>\n",
        "      <td>26.8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Andorra</td>\n",
-       "      <td>1977</td>\n",
-       "      <td>35.9</td>\n",
+       "      <td>1970</td>\n",
+       "      <td>36.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>United Arab Emirates</td>\n",
-       "      <td>1977</td>\n",
-       "      <td>31.9</td>\n",
+       "      <td>1970</td>\n",
+       "      <td>31.7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -471,58 +784,58 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1768</th>\n",
+       "      <th>2162</th>\n",
        "      <td>Samoa</td>\n",
-       "      <td>2017</td>\n",
+       "      <td>2020</td>\n",
        "      <td>38.7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1769</th>\n",
+       "      <th>2163</th>\n",
        "      <td>Yemen</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>36.7</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>37.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1770</th>\n",
+       "      <th>2164</th>\n",
        "      <td>South Africa</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>63.3</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>64.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1771</th>\n",
+       "      <th>2165</th>\n",
        "      <td>Zambia</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>57.1</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>57.9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1772</th>\n",
+       "      <th>2166</th>\n",
        "      <td>Zimbabwe</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>44.3</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>51.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1773 rows × 3 columns</p>\n",
+       "<p>2167 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "                   country  Year  Gini\n",
-       "0              Afghanistan  1977  33.0\n",
-       "1                   Angola  1977  54.4\n",
-       "2                  Albania  1977  26.8\n",
-       "3                  Andorra  1977  35.9\n",
-       "4     United Arab Emirates  1977  31.9\n",
+       "0              Afghanistan  1970  31.5\n",
+       "1                   Angola  1970  55.0\n",
+       "2                  Albania  1970  26.8\n",
+       "3                  Andorra  1970  36.0\n",
+       "4     United Arab Emirates  1970  31.7\n",
        "...                    ...   ...   ...\n",
-       "1768                 Samoa  2017  38.7\n",
-       "1769                 Yemen  2017  36.7\n",
-       "1770          South Africa  2017  63.3\n",
-       "1771                Zambia  2017  57.1\n",
-       "1772              Zimbabwe  2017  44.3\n",
+       "2162                 Samoa  2020  38.7\n",
+       "2163                 Yemen  2020  37.5\n",
+       "2164          South Africa  2020  64.0\n",
+       "2165                Zambia  2020  57.9\n",
+       "2166              Zimbabwe  2020  51.0\n",
        "\n",
-       "[1773 rows x 3 columns]"
+       "[2167 rows x 3 columns]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -558,7 +871,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.1"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
